vlib/v/checker/tests/pass_mut_lit.vv
struct Box {
mut:
	value int
}

fn modify(mut box Box, value int) {
	box.value = value
}

modify(mut Box{}, 10)
